--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
             <configuration>
               <sourceDirs>
                 <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
-                <sourceDir>${project.basedir}/src/test/java</sourceDir>
+                <!--<sourceDir>${project.basedir}/src/test/java</sourceDir>-->
               </sourceDirs>
             </configuration>
           </execution>
