--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
               <goal>compile</goal>
             </goals>
             <configuration>
+              <jvmTarget>1.8</jvmTarget>
               <sourceDirs>
                 <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
                 <sourceDir>${project.basedir}/src/main/java</sourceDir>
@@ -100,6 +101,7 @@
               <goal>test-compile</goal>
             </goals>
             <configuration>
+              <jvmTarget>1.8</jvmTarget>
               <sourceDirs>
                 <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
                 <!--<sourceDir>${project.basedir}/src/test/java</sourceDir>-->
@@ -135,6 +137,37 @@
               <goal>test-compile</goal>
               <goal>test-compile-custom</goal>
             </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+        <executions>
+          <!-- Replacing default-compile as it is treated specially by maven -->
+          <execution>
+            <id>default-compile</id>
+            <phase>none</phase>
+          </execution>
+          <!-- Replacing default-testCompile as it is treated specially by maven -->
+          <execution>
+            <id>default-testCompile</id>
+            <phase>none</phase>
+          </execution>
+          <execution>
+            <id>java-compile</id>
+            <phase>compile</phase>
+            <goals> <goal>compile</goal> </goals>
+          </execution>
+          <execution>
+            <id>java-test-compile</id>
+            <phase>test-compile</phase>
+            <goals> <goal>testCompile</goal> </goals>
           </execution>
         </executions>
       </plugin>
